config: change BASE_URL

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Website Configuration
-BASE_URL        = 'http://localhost/codeigniter3-qrcode'
+BASE_URL        = 'http://localhost:8000/'
 ENVIRONMENT     = 'development'
 
 # Database Configuration
